# Semanhasht

./: CMakeLists.txt  Main.qml  README.md  main.cpp  redource.qrc
files/: Matrix.txt  Test.txt  distanceList.txt
include/: best_time.h  cost.cpp  cost.h  distance.hpp  resetpath.cpp  resetpath.h  semanhasht.h  ttime.cpp  ttime.h
qml/: map.qml
src/: best_time.cpp  cost.cpp  distance.cpp  main.cpp  resetpath.cpp  semanhasht.cpp  ttime.cpp
